Chapter3/2.4/manifests/todoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-2-4-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todoapp-2-4
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
